java_design_patterns_study_notes