@@ -5356,3 +5356,223 @@ Caused by: java.lang.RuntimeException: 此类的对象单例！
 
 ### 单例模式的使用场景
 
+Runtime类就是使用的单例设计模式
+
+
+
+```java
+public class Runtime {
+    private static final Runtime currentRuntime = new Runtime();
+
+    private static Version version;
+
+    /**
+     * Returns the runtime object associated with the current Java application.
+     * Most of the methods of class {@code Runtime} are instance
+     * methods and must be invoked with respect to the current runtime object.
+     *
+     * @return  the {@code Runtime} object associated with the current
+     *          Java application.
+     */
+    public static Runtime getRuntime() {
+        return currentRuntime;
+    }
+
+    /** Don't let anyone else instantiate this class */
+    private Runtime() {}
+    
+    ...
+```
+
+
+
+
+
+使用：
+
+```java
+package mao;
+
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+
+/**
+ * Project name(项目名称)：java设计模式_破坏单例模式
+ * Package(包名): mao
+ * Class(类名): RuntimeTest
+ * Author(作者）: mao
+ * Author QQ：1296193245
+ * GitHub：https://github.com/maomao124/
+ * Date(创建日期)： 2022/8/12
+ * Time(创建时间)： 20:29
+ * Version(版本): 1.0
+ * Description(描述)： 无
+ */
+
+public class RuntimeTest
+{
+    public static void main(String[] args) throws IOException
+    {
+
+
+        System.out.println(Runtime.getRuntime());
+        System.out.println(Runtime.getRuntime());
+        System.out.println(Runtime.getRuntime());
+        Runtime runtime = Runtime.getRuntime();
+
+        //注册一个新的虚拟机关闭挂钩
+        runtime.addShutdownHook(new Thread(new Runnable()
+        {
+            @Override
+            public void run()
+            {
+                System.out.println("java虚拟机即将关闭!!!");
+            }
+        }));
+
+        Process process = runtime.exec("java --help");
+        InputStream inputStream = process.getInputStream();
+        InputStreamReader inputStreamReader = new InputStreamReader(inputStream, "GBK");
+        BufferedReader bufferedReader = new BufferedReader(inputStreamReader);
+        String str;
+        while ((str = bufferedReader.readLine()) != null)
+        {
+            System.out.println(str);
+        }
+
+        long totalMemory = runtime.totalMemory();
+        System.out.println(totalMemory);
+        long freeMemory = runtime.freeMemory();
+        System.out.println(freeMemory);
+        long maxMemory = runtime.maxMemory();
+        System.out.println(maxMemory);
+    }
+}
+```
+
+
+
+运行结果：
+
+```sh
+java.lang.Runtime@119d7047
+java.lang.Runtime@119d7047
+java.lang.Runtime@119d7047
+用法：java [options] <主类> [args...]
+           （执行类）
+   或  java [options] -jar <jar 文件> [args...]
+           （执行 jar 文件）
+   或  java [options] -m <模块>[/<主类>] [args...]
+       java [options] --module <模块>[/<主类>] [args...]
+           （执行模块中的主类）
+   或  java [options] <源文件> [args]
+           （执行单个源文件程序）
+
+ 将主类、源文件、-jar <jar 文件>、-m 或
+ --module <模块>/<主类> 后的参数作为参数
+ 传递到主类。
+
+ 其中，选项包括：
+
+    -cp <目录和 zip/jar 文件的类搜索路径>
+    -classpath <目录和 zip/jar 文件的类搜索路径>
+    --class-path <目录和 zip/jar 文件的类搜索路径>
+                  使用 ; 分隔的, 用于搜索类文件的目录, JAR 档案
+                  和 ZIP 档案列表。
+    -p <模块路径>
+    --module-path <模块路径>...
+                  用 ; 分隔的目录列表, 每个目录
+                  都是一个包含模块的目录。
+    --upgrade-module-path <模块路径>...
+                  用 ; 分隔的目录列表, 每个目录
+                  都是一个包含模块的目录, 这些模块
+                  用于替换运行时映像中的可升级模块
+    --add-modules <模块名称>[,<模块名称>...]
+                  除了初始模块之外要解析的根模块。
+                  <模块名称> 还可以为 ALL-DEFAULT, ALL-SYSTEM,
+                  ALL-MODULE-PATH.
+    --list-modules
+                  列出可观察模块并退出
+    -d <module name>
+    --describe-module <模块名称>
+                  描述模块并退出
+    --dry-run     创建 VM 并加载主类, 但不执行 main 方法。
+                  此 --dry-run 选项对于验证诸如
+                  模块系统配置这样的命令行选项可能非常有用。
+    --validate-modules
+                  验证所有模块并退出
+                  --validate-modules 选项对于查找
+                  模块路径中模块的冲突及其他错误可能非常有用。
+    -D<名称>=<值>
+                  设置系统属性
+    -verbose:[class|module|gc|jni]
+                  为给定子系统启用详细输出
+    -version      将产品版本输出到错误流并退出
+    --version     将产品版本输出到输出流并退出
+    -showversion  将产品版本输出到错误流并继续
+    --show-version
+                  将产品版本输出到输出流并继续
+    --show-module-resolution
+                  在启动过程中显示模块解析输出
+    -? -h -help
+                  将此帮助消息输出到错误流
+    --help        将此帮助消息输出到输出流
+    -X            将额外选项的帮助输出到错误流
+    --help-extra  将额外选项的帮助输出到输出流
+    -ea[:<程序包名称>...|:<类名>]
+    -enableassertions[:<程序包名称>...|:<类名>]
+                  按指定的粒度启用断言
+    -da[:<程序包名称>...|:<类名>]
+    -disableassertions[:<程序包名称>...|:<类名>]
+                  按指定的粒度禁用断言
+    -esa | -enablesystemassertions
+                  启用系统断言
+    -dsa | -disablesystemassertions
+                  禁用系统断言
+    -agentlib:<库名>[=<选项>]
+                  加载本机代理库 <库名>, 例如 -agentlib:jdwp
+                  另请参阅 -agentlib:jdwp=help
+    -agentpath:<路径名>[=<选项>]
+                  按完整路径名加载本机代理库
+    -javaagent:<jar 路径>[=<选项>]
+                  加载 Java 编程语言代理, 请参阅 java.lang.instrument
+    -splash:<图像路径>
+                  使用指定的图像显示启动屏幕
+                  自动支持和使用 HiDPI 缩放图像
+                  (如果可用)。应始终将未缩放的图像文件名 (例如, image.ext)
+                  作为参数传递给 -splash 选项。
+                  将自动选取提供的最合适的缩放
+                  图像。
+                  有关详细信息, 请参阅 SplashScreen API 文档
+    @argument 文件
+                  一个或多个包含选项的参数文件
+    -disable-@files
+                  阻止进一步扩展参数文件
+    --enable-preview
+                  允许类依赖于此发行版的预览功能
+要为长选项指定参数, 可以使用 --<名称>=<值> 或
+--<名称> <值>。
+
+268435456
+264951872
+4280287232
+java虚拟机即将关闭!!!
+```
+
+
+
+
+
+
+
+
+
+## 简单工厂模式
+
+
+
+
+
